# bevy_rts

./: Cargo.toml
assets/: SizeTest.glb  sector_cost_fields.ron  shader_digit.wgsl  tank2.gltf  tank_green.glb  tank_tan.glb
assets/models/: grass_field.gltf
assets/models/structures/: barracks.glb  barracks.gltf  cannon.gltf  research_center.glb  research_center.gltf  satellite_dish.glb  satellite_dish.gltf  turret.glb  vehicle_depot.glb  vehicle_depot.gltf
assets/models/structures/placeholders/: barracks.gltf  cannon.gltf  research_center.gltf  satellite_dish.gltf  vehicle_depot.gltf
assets/models/structures/placeholders/invalid/: barracks.gltf  cannon.gltf  research_center.gltf  satellite_dish.gltf  vehicle_depot.gltf
assets/models/structures/placeholders/valid/: barracks.gltf  cannon.gltf  research_center.gltf  satellite_dish.gltf  (+1 more)
assets/models/structures/vehicle_depot/: vehicle_depot.gltf
assets/models/units/: tank.gltf
assets/models/units/artillery/: artillery.gltf
assets/models/units/rifleman/: tank_gen_1.gltf
assets/models/units/tank/: tank.gltf
assets/models/units/tank_gen2/: tank_gen2.gltf
assets/shaders/: lighting_extended.wgsl  outline.wgsl  outline_2.wgsl  stylized.wgsl  tint.wgsl
src/: bank.rs  base_building.rs  camera.rs  cmd_center_ui.rs  commands.rs  components.rs  events.rs  friendly.rs  main.rs  map.rs  mouse.rs  path_finding.rs  pathfinding.rs  resources.rs  tank.rs  tanks.rs  units.rs  utils.rs
src/asset_manager/: animations.rs  audio.rs  cmds.txt  imgs.rs  mod.rs  models.rs  textures.rs
src/cmd_interface/: build_actions.rs  components.rs  events.rs  mod.rs  resources.rs  ui.rs
src/components/: mod.rs  structures.rs  units.rs
src/new/: ai_enemy.rs  animation_controller.rs  audio_controller.rs  barracks.rs  components.rs  debug.rs  events.rs  friendly.rs  hud.rs  map.rs  mod.rs  mouse.rs  resources.rs  rounds.rs  soldiers.rs  tank_factory.rs  tanks.rs  tanks_2.rs  utils.rs
src/original/: camera.rs  map.rs  mod.rs  tanks.rs  utils.rs
src/resources/: mod.rs  structures.rs  units.rs
src/shaders/: mod.rs  outline.rs  outline_2.rs  outline_shader.rs  stylized.rs  tint.rs  tint_shader.rs
src/structures/: components.rs  events.rs  mod.rs  resources.rs  vehicle_depot.rs
src/units/: components.rs  events.rs  mod.rs  resources.rs
(+2 files in other folders)
