[package]
name = "rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.17.1"
bevy = { version = "0.15.3", features = ["file_watcher"] }
bevy-inspector-egui = "0.28.0"
bevy_kira_audio = "0.22.0"
bevy_mod_outline = "0.9.1"
bevy_rapier3d = "0.28.0"
bevy_rts_camera = "0.9.0"
bevy_rts_pathfinding = { path = "../../projects/bevy_rts_pathfinding" }
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
walkdir = "2.5.0"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.dev]
codegen-units = 1
opt-level = 0

[profile.release]
codegen-units = 1
opt-level = 3
