[package]
name = "rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = "0.18.0"
bevy = { version = "0.16.0", features = ["file_watcher"] }
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
# bevy_kira_audio = "0.22.0"
bevy_mod_outline = { git = "https://github.com/komadori/bevy_mod_outline.git", branch = "bevy-0.16" }
# bevy_rapier3d = "0.28.0"
bevy_rapier3d = { git = "https://github.com/mnmaita/bevy_rapier.git", branch = "mnmaita/bevy-0.16" }
bevy_rts_camera = "0.10.0"
bevy_rts_pathfinding = { path = "../../projects/bevy_rts_pathfinding" }
rand = "0.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"
walkdir = "2.5.0"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.dev]
codegen-units = 1
opt-level = 0

[profile.release]
codegen-units = 1
opt-level = 3
